--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@ Code6
 MaxNum
 code2
 noOfZerosAndOnes.cpp
-.gitignore
-.gitignore
 LinearSearch
 code3
 Code4
 MinNum
+ExtremePrint
+ExtremePrint2
+ExtremePrint1
+tempCodeRunnerFile.cpp
