--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,1 @@
-*.exec
-noOfZerosAndOnes
-Code5
-Code6
-MaxNum
-code2
-noOfZerosAndOnes.cpp
-LinearSearch
-code3
-Code4
-MinNum
-ExtremePrint
-ExtremePrint2
-ExtremePrint1
-tempCodeRunnerFile.cpp
-ReverseArray
+Lecture1/Code1
