--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 Lecture1/Code1
 LinearSearch.cpp
 Code1
-Code1.cpp
-code2.cpp
-code3.cpp
-Code4.cpp
-Code5.cpp
-Code6.cpp
+# Code1.cpp
+# code2.cpp
+# code3.cpp
+# Code4.cpp
+# Code5.cpp
+# Code6.cpp
 ExtremePrint1.cpp
 ExtremePrint2.cpp
 LinearSearch.cpp
