--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Lecture2/Q1_FindUniqueElement
 Lecture2/Q2_UnionOfTwoArray
 Lecture2/Q3_IntersectionOfTwoArray
+Lecture2/Lecture3/Code1.cpp
+Lecture3/Code1
