--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ Lecture2/Lecture3/Code1.cpp
 Lecture3/Code1
 Lecture3/Code2
 Lecture2/Q4_UnionWithDuplicates
-
+Lecture2/Q6_TripletSum
+Lecture2/Q5_PairSum
