--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@ Lecture2/Q5_PairSum
 Lecture2/Q7_FourSum
 Lecture2/Q8_DutchNaturalFlag
 Lecture2/Q9_LeftRotateArray
+Lecture1/my1
+Lecture1/my2
+Lecture1/Q1_LinearSearch
+Lecture1/Q2_NoOfZeroAndOne
+Lecture1/Q3_MaxNum
+Lecture1/Q4_MinNum
+Lecture1/Q5.1_ExtremePrint
+Lecture1/Q5.2_ExtremePrint
+Lecture1/Q6_ReverseArray
+Lecture3/Q1_RowSum
