--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ Lecture1/Q5.1_ExtremePrint
 Lecture1/Q5.2_ExtremePrint
 Lecture1/Q6_ReverseArray
 Lecture3/Q1_RowSum
+Lecture3/Q2_ColumnWiseSum
+Lecture3/Q3_LinearSearch
+Lecture3/Q4_MaxAndMin
+Lecture3/Q5_Transpose
