--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ Lecture3/Q2_ColumnWiseSum
 Lecture3/Q3_LinearSearch
 Lecture3/Q4_MaxAndMin
 Lecture3/Q5_Transpose
+.vscode/c_cpp_properties.json
+Lecture3/2D_Array_Using_Vector/Code1
