--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ Lecture3/Q4_MaxAndMin
 Lecture3/Q5_Transpose
 .vscode/c_cpp_properties.json
 Lecture3/2D_Array_Using_Vector/Code1
+Lecture3/2D_Array_Using_Vector/Code2
