--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ Lecture3/Q5_Transpose
 .vscode/c_cpp_properties.json
 Lecture3/2D_Array_Using_Vector/Code1
 Lecture3/2D_Array_Using_Vector/Code2
+Lecture3/2D_Array_Using_Vector/Code3
